--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.19.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
@@ -19,6 +21,8 @@
     "locus": "^2.0.4",
     "method-override": "^3.0.0",
     "mongoose": "^5.8.3",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
