--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.8.3",
     "multer": "^1.4.2",
+    "node-geocoder": "^3.25.0",
     "nodemailer": "^6.4.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
